Redid gallery without arrow component and fixed collapse animation

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -2,7 +2,6 @@ $border-radius: 10px;
 
 .dropdown {
     width: 100%;
-    
     div {
         background-color: #FF6060;
         border-radius: $border-radius;
@@ -21,7 +20,6 @@ $border-radius: 10px;
         }
     }
     ul {
-        transition-duration: 0.5s;
         list-style: none;
         background-color: #F6F6F6;
         margin: 0;
@@ -30,11 +28,15 @@ $border-radius: 10px;
         border-bottom-right-radius: $border-radius;
         transform: translateY(0);
         z-index: 0;
+        transition-duration: 0.5s;
     }
     &:not(.open) {
+        max-height: 69px;
         ul {
             opacity: 0;
-            transform: translateY(-50px) 
+            position: absolute;
+            transform: translateY(-50px);
+            transition-duration: 0s;
         }
         div img {
             transform: rotate(180deg);
